--- a/package.json
+++ b/package.json
@@ -1,14 +1,44 @@
 {
   "name": "demo",
-  "version": "1.0.0",
-  "description": "## Build",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "0.1.0",
+  "description": "A demo sCrypt smart contract.",
   "author": "",
-  "license": "ISC"
+  "scripts": {
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "deploy": "npx ts-node ./deploy.ts",
+    "clean": "rimraf scrypt.index.json && rimraf dist && rimraf artifacts",
+    "compile": "npx scrypt-cli@latest compile",
+    "pretest": "npm run build && npm run compile",
+    "test": "npm run test:mocha",
+    "test:mocha": "cross-env NETWORK=local mocha",
+    "pretest:testnet": "npm run build && npm run compile",
+    "test:testnet": "cross-env NETWORK=testnet mocha --no-timeouts",
+    "genprivkey": "npx ts-node tests/utils/privateKey.ts",
+    "prepare": "husky install"
+  },
+  "**/*.{ts,js}": [
+    "eslint --cache --fix"
+  ],
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "scrypt-ord": "^1.0.16",
+    "scrypt-ts": "latest",
+    "scrypt-ts-lib": "^0.1.25"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.10",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "husky": "^8.0.3",
+    "mocha": "^10.1.0",
+    "prettier": "^2.8.2",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "license": "MIT"
 }
