--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "dotenv": "^16.0.3",
+    "neucron-signer": "^1.3.2",
     "scrypt-ord": "^1.0.16",
     "scrypt-ts": "latest",
     "scrypt-ts-lib": "^0.1.25"
